--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
     <groupId>org.example</groupId>
     <artifactId>S4-Spring-2022-PR-Practice</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>src</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
